app.css
/* ... */
h1, h2, h3, h4, p, a, input, span {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased; }

p {
  font-family: "Merriweather", "IBM Plex Serif", serif;
  font-size: 16px;
  line-height: 40px; }

h1 {
  font-family: "IBM Plex Sans", Helvetica, sans-serif;
  font-size: 30px;
  line-height: 45px;
  font-weight: 700;
  max-width: 800px;
  margin: auto;
  padding-bottom: 10px; }

h2 {
  font-family: "IBM Plex Sans", Helvetica, sans-serif;
  font-size: 20px;
  font-weight: 700;
  color: #333333; }

h4 {
  margin-top: -10px;
  line-height: 40px;
  font-size: 20px;
  font-family: "Merriweather", "IBM Plex Serif", serif;
  font-style: normal;
  font-weight: 400;
  max-width: 800px;
  margin: auto;
  color: #333333; }

h1.hero {
  color: white;
  font-size: 45px;
  line-height: 55px; }

h4.hero {
  font-family: 'IBM Plex Serif';
  font-style: italic;
  line-height: 35px;
  color: rgba(255, 255, 255, 0.74);
  font-size: 22px; }

a {
  color: #333333 !important;
  text-decoration: none !important;
  font-size: 20px; }

input {
  font-size: 16px; }

.bold {
  font-weight: 700; }

span.code {
  font-family: "IBM Plex Mono", monospace;
  font-weight: 700;
  font-size: 15px;
  text-transform: uppercase;
  border: 1px solid #E1E1E8;
  background-color: #F7F7F9;
  color: #507cf0;
  padding: 2px 5px 2px 5px;
  border-radius: 2px; }

span.code:hover {
  color: blue;
  border: 1px solid #bfbfc7; }

hr {
  border-top: 1px solid #a4a4a4; }

@media screen and (min-width: 1275px) {
  img.hero-img {
    margin-right: 0px; } }

@media screen and (max-width: 1380px) {
  .demo-box {
    margin-right: -150px; } }

@media screen and (max-width: 1258px) {
  .demo-box {
    margin-right: -300px; } }

@media screen and (max-width: 1100px) {
  .card {
    margin-bottom: 100px;
    max-width: 450px;
    width: 90%; }
  .float-left {
    float: none; }
  .col-md-4 {
    padding-right: 0px;
    padding-left: 0px; }
  .row {
    margin-left: 0px;
    margin-right: 0px; }
  .show {
    display: none !important; }
  .hide {
    display: block !important; }
  .large {
    margin-bottom: 40px; }
  .child.card {
    margin-bottom: 35px;
    min-height: 150px; } }

@media screen and (max-width: 1000px) {
  .display-hide {
    display: block; }
  .float-right {
    display: none; }
  .demo-box {
    width: 100%;
    margin-right: 0px;
    margin: auto; }
  .flex-container-sml {
    display: flex; }
  .hide-sml {
    display: block !important; }
  .feature-box {
    display: none; } }

@media screen and (max-width: 990px) {
  .people-img {
    width: 100%;
    max-width: 300px;
    display: block;
    margin: auto; }
  .quote span {
    background-color: transparent;
    padding: 0px; } }

@media screen and (max-width: 850px) {
  span.required {
    display: none !important; }
  .card {
    margin-bottom: 30px;
    width: 100%; }
  .hero-card {
    height: 100%;
    padding-bottom: 100px; }
  img.hero-img {
    display: none; }
  .hero-text {
    text-align: center;
    width: 80%;
    margin: auto;
    top: 30px;
    padding: 25px; }
  .nav-items {
    width: 90%; }
  .about-txt {
    top: 70px;
    max-width: 500px; }
  .about-img {
    width: 450px !important;
    height: auto !important; }
  .people-img {
    width: 100%;
    max-width: 300px;
    display: block;
    margin: auto; }
  .shit-container img {
    display: none; } }

@media screen and (max-width: 650px) {
  .hero-text {
    text-align: center !important; }
  .mobile-centered {
    text-align: center; }
  h1.hero {
    font-size: 35px !important; }
  h4.hero {
    font-size: 22px !important; }
  #simpleForm {
    width: 80%; }
  .hide-mobile {
    display: none; }
  .show-mobile {
    display: block; }
  .button-nav {
    margin-bottom: 20px; }
  .hero-image {
    display: none; }
  .hero-card {
    height: 100%;
    padding-bottom: 100px; }
  .navbar {
    height: auto; }
  .nav-items {
    text-align: center; }
  .nav-logo {
    width: 120px; }
  .nav-link {
    padding-left: 15px;
    padding-right: 15px; }
  .nav-menu {
    margin-top: -15px;
    float: none; }
  .hero-card {
    margin-top: 15px; }
  .primary-container-hero {
    padding-top: 70px; }
  .hero-card {
    padding-bottom: 40px; }
  .about-txt {
    top: 40px; }
  .demo-link {
    display: inline-block; }
  .nav-logo {
    display: inline-block;
    margin-bottom: 30px; }
  .nav-items form {
    display: none; }
  .nav-items {
    border-bottom: none; }
  .navbar {
    background-color: white;
    border-bottom: 2px solid #bbbbbb; }
  form input {
    display: block;
    margin-bottom: 10px;
    width: 100%; }
  .input-primary {
    margin-bottom: 5px; }
  .input-nav {
    width: 100%; }
  .input-nav:focus {
    width: 100%; }
  .flex {
    display: block; }
  .blog-container .flex {
    margin-bottom: -20px; }
  .flex-container-sml {
    display: block; }
  .flex > .usecase-box {
    margin-bottom: 40px;
    border-bottom: 4px solid #507cf0; } }

@media screen and (max-width: 415px) {
  h1 {
    line-height: 45px !important; }
  .small {
    width: 100%;
    max-width: 220px;
    margin: auto; }
  .research-txt {
    float: none;
    margin: 0px; }
  .article {
    width: 100%; }
  .info {
    display: none; }
  .hero-text {
    text-align: left;
    padding-left: 0px;
    padding-right: 0px;
    width: 100%; } }

body {
  margin: 0;
  padding: 0;
  background-color: white;
  overflow-x: hidden; }

a .banner {
  opacity: .95;
  transition: .3s ease; }

a .banner:hover {
  opacity: 1; }

.banner {
  position: relative;
  background-color: lightgrey;
  height: fit-content;
  width: 100%;
  background: linear-gradient(0deg, rgba(9, 44, 109, 0.945), rgba(14, 60, 145, 0.664)), url("images/skipper-engineering-integration-ideation.jpeg");
  background-image: no-repeat;
  background-position: center;
  background-size: cover;
  background-position-y: 5%;
  background-attachment: fixed;
  margin-bottom: 60px; }
/* ... */

